fixed menu issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,6 @@
 
  .header {
   background-color: #fff;
-  width: 100%;
   z-index: 3;
   padding-left: 20px;
 }
@@ -88,7 +87,7 @@
 
 .header li a {
   display: block;
-  padding: 10px 10px;
+  padding: 5px 10px;
   text-decoration: none;
 }
 
@@ -241,7 +240,7 @@
 
 .image {
 	width:100%;
-	margin:90px 0px 90px 0px;
+	margin:90px 0px 90px -15px;
 	box-shadow:0 0 4px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -364,7 +363,10 @@ a.hvr-underline-reveal:active:before {
     position: sticky;
     top: 20px;
   }
-
+  .header li a {
+    padding: 10px 10px;
+    text-decoration: none;
+  }
   .header .menu-icon {
     display: none;
   }
